--- a/package.json
+++ b/package.json
@@ -8,18 +8,15 @@
     "build": "parcel build index.html --no-minify --public-url ./"
   },
   "devDependencies": {
-    "@types/three": "^0.139.0",
     "parcel-bundler": "^1.6.1",
     "parcel-plugin-static-files-copy": "^2.6.0",
-    "typescript": "4.4.4",
-    "@types/webgi": "https://storage.googleapis.com/dist.pixotronics.com/webgi/runtime/bundle-types-0.4.7.tgz",
     "webgi": "https://storage.googleapis.com/dist.pixotronics.com/webgi/runtime/bundle-0.4.7.tgz"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
   },
   "keywords": [
-    "typescript",
+
     "javascript"
   ],
   "staticFiles": {
@@ -29,5 +26,9 @@
         "staticOutDir": "assets"
       }
     ]
+  },
+  "dependencies": {
+    "gsap": "^3.11.1",
+    "tweakpane": "^3.1.0"
   }
 }
